# DataOverSocketProtocol

./: .gitignore  Protocol basic.md  README.md  deploy.bat  example.py  example2.py  files.txt  interactive_messager.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: python-publish.yml
docs/: api-reference.md  overview.md  project-summary.md  protocol-spec.md  quickstart.md
docs/dev/: base.md
dosp/: __init__.py  client.py  iptools.py  protocol.py
dosp/server/: base.py
examples/: example.py  example2.py  interactive_messager.py  server.py
gui/: README.md  dosp_client_gui.py  requirements.txt
tests/asyncio/: multi_client_test.py  server_harness.py
tests/encrypt/: client1.py  client2.py
vnet/: __init__.py  client.py  iptools.py  protocol.py
vnet/server/: __init__.py  base.py
